# cardano-bbs

./: .gitignore  404.html  CLAUDE.md  README.md  flake.nix  index.html  justfile  mkdocs.yml  sitemap.xml
.github/workflows/: ci.yml  deploy-docs.yaml
.specify/memory/: constitution.md
architecture/: index.html
docs/: architecture.md  getting-started.md  index.md  offchain-api.md  onchain.md  roadmap.md  testing.md
docs/concepts/: index.md  zk-ceremony.md  zk-selective-disclosure.md  zk-usecases.md
getting-started/: index.html
lean/: ZkSelectiveDisclosure.lean  lakefile.lean
nix/: apps.nix  checks.nix  project.nix  zkryptium-ffi.nix
offchain/: cabal.project  cardano-bbs.cabal  fourmolu.yaml
offchain-api/: index.html
offchain/app/: BudgetCases.hs
offchain/cbits/zkryptium-ffi/: Cargo.toml
offchain/cbits/zkryptium-ffi/src/: lib.rs
offchain/src/Cardano/BBS/: Credential.hs  FFI.hs  KeyGen.hs  Proof.hs  Serialize.hs  TxBuild.hs  Verify.hs
offchain/src/Cardano/BLS/: Aggregate.hs  Sign.hs
offchain/test/: Main.hs
offchain/test/Conformance/: ProofSpec.hs  SelectiveDisclosureSpec.hs  SignatureSpec.hs
offchain/test/Integration/: RoundTripSpec.hs  TxSubmitSpec.hs
offchain/test/Unit/: CredentialSpec.hs  SerializeSpec.hs  TxBuildSpec.hs
onchain/: aiken.toml  index.html  plutus.json
onchain/lib/bbs/: budget.ak  generators.ak  transcript.ak  types.ak  verify.ak
onchain/lib/bls/: aggregate.ak  types.ak
onchain/validators/: bbs_credential.ak  bls_oracle.ak
roadmap/: index.html
scripts/: check-budget-matrix.sh
search/: search_index.json
specs/001-bbs-credentials/: budget-baseline.json  budget-report.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-bbs-credentials/checklists/: requirements.md
specs/001-bbs-credentials/contracts/: offchain-api.md  onchain-api.md
specs/002-permit-example/: spec.md
specs/002-permit-example/checklists/: requirements.md
testing/: index.html
