cabal-version: 3.0
name:          cardano-bbs
version:       0.1.0.0
synopsis:      BBS+ anonymous credentials for Cardano
license:       Apache-2.0
build-type:    Simple

library
  hs-source-dirs:  src
  default-language: Haskell2010
  ghc-options:     -Wall
  exposed-modules:
    Cardano.BBS.KeyGen
    Cardano.BBS.Credential
    Cardano.BBS.Proof
    Cardano.BBS.TxBuild
    Cardano.BBS.Verify
    Cardano.BBS.Serialize
    Cardano.BBS.FFI
    Cardano.BLS.Sign
    Cardano.BLS.Aggregate
  build-depends:
    , base       >= 4.14 && < 5
    , bytestring >= 0.11
    , serialise  >= 0.2
    , cborg      >= 0.2
    , aeson      >= 2.0
    , binary     >= 0.8
    , text       >= 1.2
    , containers >= 0.6
    , plutus-core
    , plutus-tx
  extra-libraries:
    zkryptium_ffi

test-suite unit-tests
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  main-is:         Main.hs
  default-language: Haskell2010
  ghc-options:     -Wall -threaded
  other-modules:
    Conformance.SelectiveDisclosureSpec
    Integration.RoundTripSpec
    Integration.TxSubmitSpec
    Unit.CredentialSpec
    Unit.SerializeSpec
    Unit.TxBuildSpec
    Conformance.SignatureSpec
    Conformance.ProofSpec
  build-depends:
    , base
    , cardano-bbs
    , bytestring
    , cborg
    , base16-bytestring >= 1.0
    , hspec       >= 2.0
    , aeson
    , binary
    , cardano-crypto-class
    , cardano-ledger-alonzo
    , cardano-ledger-api
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-node-clients
    , cardano-node-clients:devnet
    , containers
    , cryptonite
    , directory
    , filepath
    , memory
    , microlens
    , plutus-core
    , plutus-tx
    , process
    , text

executable budget-cases
  hs-source-dirs:  app
  main-is:         BudgetCases.hs
  default-language: Haskell2010
  ghc-options:     -Wall
  build-depends:
    , base
    , cardano-bbs
    , bytestring
